--- a/src/pages/live-coding.njk
+++ b/src/pages/live-coding.njk
@@ -48,7 +48,20 @@ metaDesc: 'Live Coding and other streaming projects that Nick Taylor does.'
   </ul>
 </details>
 
+<section>
 <h2>Walkthrough Wednesdays</h2>
 <p>Every second week on the
   <a href="https://www.twitch.tv/thepracticaldev">DEV Twitch stream</a>, we interview someone from the tech space.</p>
-<iframe loading="lazy" src="https://www.youtube.com/embed/videoseries?list=PL8Bb2WLXhUaDCHK5HrxDXZWmuTARKDiV3" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowFullScreen" style="position:absolute;width:100%;height:100%;left:0;top:0" title="YouTube" width="480" height="270" frameborder="0"></iframe>
+</p>
+
+{%- for video in walkthroughWednesdays.items -%}
+  <article class="card">
+      <div class="card__img" aria-label="Preview of {{video.snippet.title}}" style="background-image: url({{video.snippet.thumbnails.medium.url }})"></div>
+      <div class="card__content">
+        <h3 class="no-anchor">{{video.snippet.title}}</h3>
+        <time datetime="{{video.snippet.publishedAt | w3DateFilter}}" class="dt-published">{{ video.snippet.publishedAt | dateFilter }}</time>
+        <p>{{video.snippet.description}}</p>
+      </div>
+    </article>
+{%- endfor -%}
+</section>
